category section 마크업

--- a/index.html
+++ b/index.html
@@ -26,8 +26,6 @@
             <div class="title-wrapper">
               <h2>MERRIER</h2>
               <h2>TOGETHER</h2>
-              <!-- <img src="./assets/image/main-banner-title.png" alt="" />
-              <img src="./assets/image/mobile-main-banner-title.png" alt="" /> -->
             </div>
             <div class="product-wrapper">
               <div class="image-box product01">
@@ -98,6 +96,47 @@
     </section>
     <!--main-banner-->
 
+    <section class="category sm-hidden">
+      <div class="contents-wrapper">
+        <div class="category-item">
+          <a href="/">
+            <i class="icon-coffee"></i>
+            <p>음료</p>
+          </a>
+        </div>
+        <div class="category-item">
+          <a href="/">
+            <i class="icon-food"></i>
+            <p>푸드</p>
+          </a>
+        </div>
+        <div class="category-item">
+          <a href="/">
+            <i class="icon-product"></i>
+            <p>상품</p>
+          </a>
+        </div>
+        <div class="category-item">
+          <a href="/">
+            <i class="icon-card"></i>
+            <p>카드</p>
+          </a>
+        </div>
+        <div class="category-item">
+          <a href="/">
+            <i class="icon-store"></i>
+            <p>매장</p>
+          </a>
+        </div>
+        <div class="category-item">
+          <a href="/">
+            <i class="icon-event"></i>
+            <p>이벤트</p>
+          </a>
+        </div>
+      </div>
+    </section>
+
     <aside id="sidebar" class="sidebar"></aside>
 
     <div class="overlay" aria-hidden="true"></div>
@@ -130,5 +169,7 @@
         load("./html/sidebar.html", null, "sidebar"); // sidebar
       };
     </script>
+
+    <script src="./js/main-banner.js"></script>
   </body>
 </html>
