section best-menu 마크업, 스타일링 추가

--- a/html/section-best-menu.html
+++ b/html/section-best-menu.html
@@ -17,11 +17,13 @@
       </div>
       <div class="tab-board">
         <ul class="tab-list sm-hidden" role="tablist">
-          <li class="is-active" role="tab" id="tab01">에스프레소</li>
-          <li role="tab" id="tab02">프라푸치노</li>
-          <li role="tab" id="tab03">티(티바나)</li>
-          <li role="tab" id="tab04">콜드 브루 커피</li>
-          <li role="tab" id="tab05">스타벅스 피지오</li>
+          <li class="is-active" data-tab="espresso" role="tab" id="tab01">
+            에스프레소
+          </li>
+          <li data-tab="frappuccino" role="tab" id="tab02">프라푸치노</li>
+          <li data-tab="tea" role="tab" id="tab03">티(티바나)</li>
+          <li data-tab="coldbrew" role="tab" id="tab04">콜드 브루 커피</li>
+          <li data-tab="fizzio" role="tab" id="tab05">스타벅스 피지오</li>
         </ul>
         <div class="tabpanel-board">
           <div class="tabpanel-list espresso is-active">
