--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Starbucks</title>
-    <link rel="stylesheet" href="css/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,6 +18,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css"
     />
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <section id="gnb" class="gnb"></section>
@@ -150,6 +150,9 @@
 
     <section id="best-menu" class="best-menu"></section>
     <!-- section card -->
+    <div id="best-menu-modal"></div>
+
+    <section id="campaign" class="campaign"></section>
 
     <aside id="sidebar" class="sidebar"></aside>
 
@@ -196,6 +199,7 @@
           await loadHTML("./html/section-coffee-bean.html", "coffee-bean");
           await loadHTML("./html/section-card.html", "card");
           await loadHTML("./html/section-best-menu.html", "best-menu");
+          await loadHTML("./html/section-campaign.html", "campaign");
 
           // js load
           await loadScript(["./js/sidebar.js", "./js/sidebar-drawer.js"]);
