sidebar 클래스명 변경

--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -314,7 +314,7 @@
     </ul>
   </div>
 
-  <div class="drawer-menu campaign">
+  <div class="drawer-menu responsibilitty">
     <button class="btn-head" type="button">
       RESPONSIBILITY
       <i class="icon-chevron"></i>
